WIP: working on tunnels UI

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -16,6 +16,9 @@
       "DOM"
     ],
     "paths": {
+      "@wails/*": [
+        "./wailsjs/*"
+      ],
       "@/*": [
         "./src/*"
       ]
