--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@babel/types": "^7.18.10",
     "@headlessui/vue": "^1.7.10",
     "@heroicons/vue": "^2.0.16",
+    "@tailwindcss/forms": "^0.5.3",
     "@types/node": "^18.14.0",
     "@vitejs/plugin-vue": "^3.0.3",
     "@vue/tsconfig": "^0.1.3",
@@ -23,6 +24,7 @@
     "inter-ui": "^3.19.3",
     "pinia": "^2.0.30",
     "postcss": "^8.4.21",
+    "tailwind-scrollbar": "^2.1.0",
     "tailwindcss": "^3.2.7",
     "typescript": "^4.6.4",
     "vite": "^3.0.7",
