--- a/frontend/tsconfig.node.json
+++ b/frontend/tsconfig.node.json
@@ -7,6 +7,9 @@
     "allowSyntheticDefaultImports": true,
     "baseUrl": ".",
     "paths": {
+      "@wails/*": [
+        "./wailsjs/*"
+      ],
       "@/*": [
         "./src/*"
       ]
