--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "autoprefixer": "^10.4.13",
     "inter-ui": "^3.19.3",
     "pinia": "^2.0.30",
+    "pinia-plugin-persistedstate": "^3.1.0",
     "postcss": "^8.4.21",
     "tailwind-scrollbar": "^2.1.0",
     "tailwindcss": "^3.2.7",
