--- a/frontend/tsconfig.node.json
+++ b/frontend/tsconfig.node.json
@@ -2,7 +2,7 @@
   "extends": "@vue/tsconfig/tsconfig.node.json",
   "compilerOptions": {
     "composite": true,
-    "module": "ESNext",
+    "module": "ES2020",
     "moduleResolution": "Node",
     "allowSyntheticDefaultImports": true,
     "baseUrl": ".",
