--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,19 +15,30 @@
   "devDependencies": {
     "@babel/types": "^7.21.2",
     "@heroicons/vue": "^2.0.16",
+    "@popperjs/core": "^2.11.6",
     "@tailwindcss/forms": "^0.5.3",
     "@types/node": "^18.14.1",
+    "@typescript-eslint/eslint-plugin": "^5.53.0",
+    "@typescript-eslint/parser": "^5.53.0",
     "@vitejs/plugin-vue": "^4.0.0",
+    "@vitejs/plugin-vue-jsx": "^3.0.0",
     "@vue/tsconfig": "^0.1.3",
     "autoprefixer": "^10.4.13",
+    "eslint": "^8.34.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-vue": "^9.9.0",
     "inter-ui": "^3.19.3",
     "pinia": "^2.0.32",
     "pinia-plugin-persistedstate": "^3.1.0",
     "postcss": "^8.4.21",
+    "prettier": "^2.8.4",
+    "prettier-plugin-tailwindcss": "^0.2.3",
     "tailwind-scrollbar": "^2.1.0",
     "tailwindcss": "^3.2.7",
     "typescript": "^4.6.4",
     "vite": "^4.1.4",
+    "vite-plugin-eslint": "^1.8.1",
+    "vue-eslint-parser": "^9.1.0",
     "vue-tsc": "^1.2.0"
   }
 }
