--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@babel/types": "^7.21.2",
+    "@fontsource/inter": "^4.5.15",
     "@heroicons/vue": "^2.0.16",
     "@miragespace/headlessui-vue": "^1.7.11",
     "@popperjs/core": "^2.11.6",
@@ -28,7 +29,6 @@
     "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-vue": "^9.9.0",
-    "inter-ui": "^3.19.3",
     "pinia": "^2.0.32",
     "pinia-plugin-persistedstate": "^3.1.0",
     "postcss": "^8.4.21",
