--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-vue": "^9.9.0",
+    "mitt": "^3.0.0",
     "pinia": "^2.0.32",
     "pinia-plugin-persistedstate": "^3.1.0",
     "postcss": "^8.4.21",
