--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,9 @@
   "devDependencies": {
     "@babel/types": "^7.21.2",
     "@fontsource/inter": "^4.5.15",
+    "@headlessui-float/vue": "^0.10.1",
     "@heroicons/vue": "^2.0.16",
-    "@miragespace/headlessui-vue": "^1.7.11",
+    "@miragespace/headlessui-vue": "^1.7.12",
     "@popperjs/core": "^2.11.6",
     "@tailwindcss/forms": "^0.5.3",
     "@types/node": "^18.14.1",
